# lcl-core

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BOM.md
