[project]
name = "lcl-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Johnny Nguyen",email = "nguye875@purdue.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.13"

